opam-version: "1.2"
authors: [ "tim@gfxmonk.net" ]
homepage: "https://github.com/timbertson/vdoml"
maintainer: "tim@gfxmonk.net"
description: "Virtual DOM"
depends: [
  "logs"
  "lwt"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "js_of_ocaml-lwt"
  "ocamlfind" {build}
  "conf-python-2-7" {build}
  "jbuilder" {build}
  "odoc" {build}
  "ppx_inline_test" {test}
  "ppx_assert" {test}
  "sexplib" {test}
]
conflicts: [
  "base-no-ppx"
]
build: [ "tools/bin/gup" "lib" ]
build-test: [ "tools/bin/gup" "test/all" ]
install: [ "./install.sh" ]
remove: [ "ocamlfind" "remove" "vdoml" ]
