opam-version: "1.2"
authors: [ "tim@gfxmonk.net" ]
homepage: "https://github.com/timbertson/vdoml"
maintainer: "tim@gfxmonk.net"
depends: [
  "logs"
  "lwt"
  "lwt_ppx"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "js_of_ocaml-lwt"
  "ocamlfind" {build}
  "conf-python-2-7" {build}
  "dune" {build}
  "odoc" {build}
  "ppx_inline_test" {test}
  "ppx_assert" {test}
  "sexplib" {test}
]
conflicts: [
  "base-no-ppx"
]
build: [ "dune" "build" "-p" name "-j" jobs ]
build-test: [ "tools/bin/gup" "test/all" ]
